<resources>
    <string-array name="days_array">
<!--        <item>ALL</item>-->
        <item>PON</item>
        <item>UTO</item>
        <item>SRE</item>
        <item>ČET</item>
        <item>PET</item>
    </string-array>
    <string name="app_name">StudentHelper</string>
    <string name="schedule">SCHEDULE</string>
    <string name="notes">NOTES</string>
    <string name="profile">PROFILE</string>
    <string name="search">SEARCH</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="done">done</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="group">Group</string>
    <string name="logout">logout</string>
    <string name="statistics">Statistics</string>
</resources>
